WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
253940
Container query with font units should invalidate when font changes
https://bugs.webkit.org/show_bug.cgi?id=253940
Summary
Container query with font units should invalidate when font changes
Tim Nguyen (:ntim)
Reported
2023-03-14 23:34:07 PDT
https://wpt.fyi/results/css/css-contain/container-queries/font-relative-units-dynamic.html?label=master&label=experimental&product=chrome&product=firefox&product=safari&aligned&view=interop&q=label%3Ainterop-2023-container
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-03-14 23:34:17 PDT
<
rdar://problem/106739736
>
Tim Nguyen (:ntim)
Comment 2
2023-03-14 23:34:35 PDT
also:
https://wpt.fyi/results/css/css-contain/container-queries/font-relative-calc-dynamic.html?label=master&label=experimental&product=chrome&product=firefox&product=safari&aligned&view=interop&q=label%3Ainterop-2023-container
Antti Koivisto
Comment 3
2023-08-23 15:08:40 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16992
EWS
Comment 4
2023-08-24 18:37:02 PDT
Committed
267258@main
(0b06dbb37578): <
https://commits.webkit.org/267258@main
> Reviewed commits have been landed. Closing PR #16992 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug