Container query with font units should invalidate when font changes https://bugs.webkit.org/show_bug.cgi?id=253940 rdar://106739736

Reviewed by Tim Nguyen.

* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/container-queries/font-relative-calc-dynamic-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/container-queries/font-relative-units-dynamic-expected.txt:

The remaining failures are units we don't support.

* Source/WebCore/style/StyleTreeResolver.cpp:
(WebCore::Style::styleChangeAffectsRelativeUnits):

Factor into a function.

(WebCore::Style::TreeResolver::resolveElement):
(WebCore::Style::TreeResolver::updateStateForQueryContainer):

If the container font size changes we need to evaluate all descendants in case there are container queries that use
font-relative units.

* Source/WebCore/style/StyleTreeResolver.h:

Canonical link: https://commits.webkit.org/267258@main